dep-svc-a.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name:  service-a
  labels:
    app: service-a
spec:
  template:
    metadata:
      labels:
        app: service-a
    spec:
      containers:
      - image: rinormaloku/service-loop:2
        name:  svc-a
        ports:
        - containerPort:  3000
          name:  svc-a
---
kind: Service
apiVersion: v1
metadata:
  name: service-a
spec:
  selector:
    app: service-a
  ports:
  - name: http
    port: 80
    targetPort: 3000
