dep-svc-b.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name:  service-b
  labels:
    app: service-b
spec:
  template:
    metadata:
      labels:
        app: service-b
    spec:
      containers:
      - image: rinormaloku/service-loop
        name:  svc-b
        ports:
        - containerPort:  3000
          name:  svc-b
---
kind: Service
apiVersion: v1
metadata:
  name: service-b
spec:
  selector:
    app: service-b
  ports:
  - name: http
    port: 80
    targetPort: 3000
