external-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: external-services
spec:
  hosts:
  - "*"
  gateways:
  - http-gateway
  http:
  - match:
    - uri:
        exact: /a
    rewrite:
      uri: /
    route:
    - destination:
        host: service-a
        port:
          number: 80
  - match:
    - uri:
        exact: /b
    rewrite:
      uri: /
    route:
    - destination:
        host: service-b
        port:
          number: 80
